package(default_visibility = ["//visibility:public"])

apple_binary(
    name = "jsonnet_wrap",
    binary_type = "loadable_bundle",
    platform_type = "macos",
    deps = [
        ":jsonnet_wrap_lib",
        "@jsonnet//core:libjsonnet",
        "@org_ruby_lang_ruby_host//:libruby",
    ],
)

cc_library(
    name = "jsonnet_wrap_lib",
    srcs = [
        "callbacks.c",
        "helpers.c",
        "jsonnet.c",
        "jsonnet_values.c",
        "ruby_jsonnet.h",
        "vm.c",
    ],
    copts = [
        "-I.",
        #"-I external/org_ruby_lang_ruby_host/Users/yugui/.rbenv/versions/2.5.0/include/ruby-2.5.0/x86_64-darwin17",
        #"-I external/org_ruby_lang_ruby_host/Users/yugui/.rbenv/versions/2.5.0/include/ruby-2.5.0/ruby/backward",
        #"-I system external/org_ruby_lang_ruby_host/Users/yugui/.rbenv/versions/2.5.0/include/ruby-2.5.0",
        "-I bazel-out/darwin-fastbuild/bin/external/org_ruby_lang_ruby_host/_virtual_includes/ruby_hdrs/x86_64-darwin17",
        "-I bazel-out/darwin-fastbuild/bin/external/org_ruby_lang_ruby_host/_virtual_includes/ruby_hdrs/ruby/backward",
        "-I bazel-out/darwin-fastbuild/bin/external/org_ruby_lang_ruby_host/_virtual_includes/ruby_hdrs",
        "-I.",
        "-DHAVE_LIBJSONNET_H",
        # "-I/Users/yugui/.rbenv/versions/2.5.0/include",
        "-D_XOPEN_SOURCE",
        "-D_DARWIN_C_SOURCE",
        "-D_DARWIN_UNLIMITED_SELECT",
        "-D_REENTRANT",
        # "-I/Users/yugui/tmp/example-jsonnet/ext/jsonnet/ports/x86_64-apple-darwin17.5.0/jsonnet/v0.10.0/include",
        "-O3",
        "-ggdb3",
        "-Wall",
        "-Wextra",
        "-Wno-unused-parameter",
        "-Wno-parentheses",
        "-Wno-long-long",
        "-Wno-missing-field-initializers",
        "-Wno-tautological-compare",
        "-Wno-parentheses-equality",
        "-Wno-constant-logical-operand",
        "-Wno-self-assign",
        "-Wunused-variable",
        "-Wimplicit-int",
        "-Wpointer-arith",
        "-Wwrite-strings",
        "-Wdeclaration-after-statement",
        "-Wshorten-64-to-32",
        "-Wimplicit-function-declaration",
        "-Wdivision-by-zero",
        "-Wdeprecated-declarations",
        "-Wextra-tokens",
    ],
    includes = [
        "bazel-out/darwin-fastbuild/bin/external/org_ruby_lang_ruby_host/_virtual_includes/ruby_hdrs",
        "bazel-out/darwin-fastbuild/bin/external/org_ruby_lang_ruby_host/_virtual_includes/ruby_hdrs/ruby/backward",
        "bazel-out/darwin-fastbuild/bin/external/org_ruby_lang_ruby_host/_virtual_includes/ruby_hdrs/x86_64-darwin17",
        "external/org_ruby_lang_ruby_host/Users/yugui/.rbenv/versions/2.5.0/include/ruby-2.5.0",
        "external/org_ruby_lang_ruby_host/Users/yugui/.rbenv/versions/2.5.0/include/ruby-2.5.0/ruby/backward",
        "external/org_ruby_lang_ruby_host/Users/yugui/.rbenv/versions/2.5.0/include/ruby-2.5.0/x86_64-darwin17",
    ],
    linkopts = [
        "-lgmp",
        "-L.",
        # "-L/Users/yugui/.rbenv/versions/2.5.0/lib",
        "-fstack-protector",
        #"-L/usr/local/lib",
    ],
    linkstatic = True,
    deps = [
        "@jsonnet//core:libjsonnet",
        "@org_ruby_lang_ruby_host//:libruby",
    ],
    alwayslink = True,
)
# vim: set ft=bzl :
